--- a/mop/Windows/EmployeeEditWindow.xaml
+++ b/mop/Windows/EmployeeEditWindow.xaml
@@ -5,13 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:mop.Windows"
         mc:Ignorable="d"
-        Title="EmployeeEditWindow" Height="700" Width="750">
+        Title="EmployeeEditWindow" Height="400" Width="750">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
@@ -30,7 +26,7 @@
                VerticalAlignment="Bottom"
                HorizontalAlignment="Left"
                RenderTransformOrigin="0.5,0.5" 
-               Grid.RowSpan="4" Grid.Row="3">
+               Grid.RowSpan="4" Grid.Row="0">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -59,6 +55,7 @@
         <TextBlock Text="фамилия" 
                    TextWrapping="Wrap"
                    FontSize="25" 
+                   x:Name="attrTb"
                    FontWeight="Bold"
                    HorizontalAlignment="Center" 
                    VerticalAlignment="Center" 
@@ -84,12 +81,11 @@
                     <GradientStop Color="#A3AEE6" Offset="1"/>
                 </LinearGradientBrush>
             </Border.BorderBrush>
-            <TextBox Background="Transparent"
+            <TextBlock Background="Transparent"
                      FontSize="25"
                      Height="40" Text="фамилия"
-                     BorderThickness="0"
                      Padding="15 0 0 0"
-                     x:Name="surnameTb">
+                     x:Name="itemTb">
 
                 <TextBlock.Foreground>
                     <LinearGradientBrush>
@@ -98,345 +94,11 @@
                         <GradientStop Color="#A3AEE6" Offset="1"/>
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
-            </TextBox>
-        </Border>
-        <TextBlock Text="имя" 
-                  FontSize="25"
-                   FontWeight="Bold"
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center" 
-                   Grid.RowSpan="1" Grid.ColumnSpan="2" 
-                   Grid.Row="2">
-            <TextBlock.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </TextBlock.Foreground>
-        </TextBlock>
-        <Border BorderThickness="4"
-                CornerRadius="26"
-                Grid.RowSpan="1" Grid.ColumnSpan="2" 
-                Grid.Row="2" Grid.Column="1"
-                Height="37" Width="250">
-            <Border.BorderBrush>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.BorderBrush>
-            <TextBox Background="Transparent"
-                     FontSize="25"
-                     Height="40" Text="имя"
-                     BorderThickness="0"
-                     Padding="15 0 0 0"
-                     x:Name="nameTb">
-
-                <TextBlock.Foreground>
-                    <LinearGradientBrush>
-                        <GradientStop Color="#C0D5B3" Offset="0"/>
-                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                        <GradientStop Color="#A3AEE6" Offset="1"/>
-                    </LinearGradientBrush>
-                </TextBlock.Foreground>
-            </TextBox>
-        </Border>
-        <TextBlock Text="отчество" 
-                  FontSize="25"
-                   FontWeight="Bold"
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center" 
-                   Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                   Grid.Row="2">
-            <TextBlock.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </TextBlock.Foreground>
-        </TextBlock>
-        <Border BorderThickness="4"
-        CornerRadius="26"
-        Grid.RowSpan="2" Grid.ColumnSpan="2" 
-        Grid.Row="2" Grid.Column="1"
-        Height="40" Width="250">
-            <Border.BorderBrush>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.BorderBrush>
-            <TextBox Background="Transparent"
-                     FontSize="25"
-                     Height="40" Text="отчество"
-                     BorderThickness="0"
-                     Padding="15 0 0 0"
-                     x:Name="patronymicTb">
-
-                <TextBlock.Foreground>
-                    <LinearGradientBrush>
-                        <GradientStop Color="#C0D5B3" Offset="0"/>
-                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                        <GradientStop Color="#A3AEE6" Offset="1"/>
-                    </LinearGradientBrush>
-                </TextBlock.Foreground>
-            </TextBox>
-        </Border>
-        <TextBlock Text="паспорт" 
-                  FontSize="25"
-                   FontWeight="Bold"
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center" 
-                   Grid.RowSpan="1" Grid.ColumnSpan="2" 
-                   Grid.Row="3">
-            <TextBlock.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </TextBlock.Foreground>
-        </TextBlock>
-        <Border BorderThickness="4"
-        CornerRadius="26"
-        Grid.RowSpan="1" Grid.ColumnSpan="2" 
-        Grid.Row="3" Grid.Column="1"
-        Height="40" Width="250">
-            <Border.BorderBrush>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.BorderBrush>
-            <TextBox Background="Transparent"
-             FontSize="25"
-             Height="40"
-             BorderThickness="0"
-             Padding="15 0 0 0"
-             x:Name="passportTb">
-
-                <TextBlock.Foreground>
-                    <LinearGradientBrush>
-                        <GradientStop Color="#C0D5B3" Offset="0"/>
-                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                        <GradientStop Color="#A3AEE6" Offset="1"/>
-                    </LinearGradientBrush>
-                </TextBlock.Foreground>
-            </TextBox>
-        </Border>
-        <TextBlock Text="телефон" 
-                  FontSize="25"
-                   FontWeight="Bold"
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center" 
-                   Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                   Grid.Row="3">
-            <TextBlock.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </TextBlock.Foreground>
-        </TextBlock>
-        <Border BorderThickness="4"
-                CornerRadius="26"
-                Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                Grid.Row="3" Grid.Column="1"
-                Height="40" Width="250">
-            <Border.BorderBrush>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.BorderBrush>
-            <TextBox Background="Transparent"
-                     FontSize="25"
-                     Height="40"
-                     BorderThickness="0"
-                     Padding="15 0 0 0"
-                     x:Name="phoneTb">
-
-                <TextBlock.Foreground>
-                    <LinearGradientBrush>
-                        <GradientStop Color="#C0D5B3" Offset="0"/>
-                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                        <GradientStop Color="#A3AEE6" Offset="1"/>
-                    </LinearGradientBrush>
-                </TextBlock.Foreground>
-            </TextBox>
-        </Border>
-        <TextBlock Text="почта" 
-                  FontSize="25"
-                   FontWeight="Bold"
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center" 
-                   Grid.RowSpan="1" Grid.ColumnSpan="2" 
-                   Grid.Row="4">
-            <TextBlock.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </TextBlock.Foreground>
-        </TextBlock>
-        <Border BorderThickness="4"
-                CornerRadius="26"
-                Grid.RowSpan="1" Grid.ColumnSpan="2" 
-                Grid.Row="4" Grid.Column="1"
-                Height="40" Width="250">
-            <Border.BorderBrush>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.BorderBrush>
-            <TextBox Background="Transparent"
-                     FontSize="25"
-                     Height="40"
-                     BorderThickness="0"
-                     Padding="15 0 0 0"
-                     x:Name="emailTb">
-
-                <TextBlock.Foreground>
-                    <LinearGradientBrush>
-                        <GradientStop Color="#C0D5B3" Offset="0"/>
-                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                        <GradientStop Color="#A3AEE6" Offset="1"/>
-                    </LinearGradientBrush>
-                </TextBlock.Foreground>
-            </TextBox>
-        </Border>
-        
-        <TextBlock Text="образование" 
-                  FontSize="25"
-                   FontWeight="Bold"
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center" 
-                   Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                   Grid.Row="4">
-            <TextBlock.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </TextBlock.Foreground>
-        </TextBlock>
-        <ComboBox Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                  Grid.Row="4" Grid.Column="1"
-                  Width="250" Height="40" FontWeight="Bold"
-                  ItemsSource="{Binding educations}">
-            <ComboBox.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </ComboBox.Foreground>
-            <ComboBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Name}"/>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
-        <TextBlock Text="логин" 
-                  FontSize="25"
-                   FontWeight="Bold"
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center" 
-                   Grid.RowSpan="1" Grid.ColumnSpan="2" 
-                   Grid.Row="5">
-            <TextBlock.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </TextBlock.Foreground>
-        </TextBlock>
-        <Border BorderThickness="4"
-        CornerRadius="26"
-        Grid.RowSpan="1" Grid.ColumnSpan="2" 
-        Grid.Row="5" Grid.Column="1"
-        Height="40" Width="250">
-            <Border.BorderBrush>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.BorderBrush>
-            <TextBox Background="Transparent"
-                     FontSize="25"
-                     Height="40"
-                     BorderThickness="0"
-                     Padding="15 0 0 0"
-                     x:Name="loginTb">
-
-                <TextBlock.Foreground>
-                    <LinearGradientBrush>
-                        <GradientStop Color="#C0D5B3" Offset="0"/>
-                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                        <GradientStop Color="#A3AEE6" Offset="1"/>
-                    </LinearGradientBrush>
-                </TextBlock.Foreground>
-            </TextBox>
-        </Border>
-        <TextBlock Text="пароль" 
-                  FontSize="25"
-                   FontWeight="Bold"
-                   HorizontalAlignment="Center" 
-                   VerticalAlignment="Center" 
-                   Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                   Grid.Row="5">
-            <TextBlock.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </TextBlock.Foreground>
-        </TextBlock>
-        <Border BorderThickness="4"
-                CornerRadius="26"
-                Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                Grid.Row="5" Grid.Column="1"
-                Height="40" Width="250">
-            <Border.BorderBrush>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.BorderBrush>
-            <TextBox Background="Transparent"
-                     FontSize="25"
-                     Height="40"
-                     BorderThickness="0"
-                     Padding="15 0 0 0"
-                     x:Name="passwordTb">
-
-                <TextBlock.Foreground>
-                    <LinearGradientBrush>
-                        <GradientStop Color="#C0D5B3" Offset="0"/>
-                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                        <GradientStop Color="#A3AEE6" Offset="1"/>
-                    </LinearGradientBrush>
-                </TextBlock.Foreground>
-            </TextBox>
+            </TextBlock>
         </Border>
         <Border CornerRadius="26" Height="35" Width="150"
                 Grid.Column="1"
-                Grid.Row="7">
+                Grid.Row="2">
             <Border.Background>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
